[package]
name = "bytesagent"
version = "0.2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/bytesagent"
repository = "https://github.com/morr0ne/bytesagent"
description = "Tell bytes what to do in rust"
edition = "2021"

[dependencies]
glam = { version = "0.20.2", optional = true }
half = { version = "1.8.2", optional = true }
