[package]
name = "bytesagent"
version = "0.4.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/bytesagent"
repository = "https://github.com/morr0ne/bytesagent"
description = "Tell bytes what to do in rust"
edition = "2021"

[dependencies]
glam = { version = "0.21.3", optional = true, default-features = false }
half = { version = "2.1.0", optional = true, default-features = false }

[features]
default = ["std"]
std = ["glam?/std", "half?/std"]
